# static_server

./: Cargo.toml
src/: main.rs
